--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ node_modules/
 
 # dotenv environment variables file
 .env
+.DS_Store
+public/.DS_Store
+public/galletas/.DS_Store
+public/galletas/202010/.DS_Store
