--- a/firebase.json
+++ b/firebase.json
@@ -25,6 +25,14 @@
         "function": "dynCookies-showCookie"
       },
       {
+        "source": "/calendario-astronomico/**/**",
+        "function": "dynCalendars-showCalendar"
+      },
+      {
+        "source": "/vista-email-calendario/**",
+        "function": "dynCalendars-showCalendar"
+      },
+      {
         "source": "/archivo",
         "function": "dynArchive-showArchive"
       },
