--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
 {
-  "name": "sciencecookies"
+  "name": "sciencecookies",
+  "scripts": {
+    "dev": "rm -r public && parcel src/index.pug --out-dir public",
+    "build": "rm -r public && parcel build src/index.pug --out-dir public"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10",
+    "pug": "^3.0.2",
+    "sass": "^1.32.8"
+  }
 }
