--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sciencecookies",
   "scripts": {
-    "dev": "rm -r public && parcel src/index.pug --out-dir public",
-    "build": "rm -r public && parcel build src/index.pug --out-dir public"
+    "dev": "rm -r public && parcel src/*.pug --out-dir public",
+    "build": "rm -r public && parcel build src/*.pug --out-dir public"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
