--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sciencecookies",
   "scripts": {
-    "dev": "rm -r public && parcel src/*.pug src/docs/*.pug src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/img/scmed/* --out-dir public",
-    "build": "rm -r public && parcel build src/*.pug src/docs/*.pug src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/img/scmed/* --out-dir public"
+    "dev": "rm -r public && parcel src/*.pug src/docs/*.pug src/styles/main.scss src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/js/global.js src/img/scmed/* src/img/NLogoHalignT.svg src/img/logoT.svg src/img/wlogoT.svg --out-dir public",
+    "build": "rm -r public && parcel build src/*.pug src/docs/*.pug src/styles/main.scss src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/js/global.js src/img/scmed/* src/img/NLogoHalignT.svg src/img/logoT.svg src/img/wlogoT.svg --out-dir public"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
