--- a/firebase.json
+++ b/firebase.json
@@ -56,18 +56,23 @@
     "redirects": [
       {
         "source": "/archivo/2020/ago-sep",
-        "destination": "/archivo/2020/jul-sep",
+        "destination": "/archivo/2020/jul-sep/",
         "type": 301
       },
       {
         "source": "/galletas/202007/:post*",
-        "destination": "/galletas/202008/:post",
+        "destination": "/galletas/202008/:post/",
         "type": 301
       },
       {
         "regex": "/(.*/?)*(\\.html)",
-        "destination": "/:1",
+        "destination": "/:1/",
         "type": 301
+      },
+      {
+        "source": "/calendario-astronomico",
+        "destination": "/calendario-astronomico/2021/",
+        "type": 302
       }
     ]
   },
