--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "firebase-admin": "9.5.0",
     "firebase-functions": "^3.13.2",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
