--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sciencecookies",
   "scripts": {
+    "deployDyn": "firebase deploy --only functions:dynAllCalls,functions:dynArchive,functions:dynCalendars,functions:dynCookies",
     "dev": "rm -r public && parcel src/*.pug src/docs/*.pug src/styles/main.scss src/styles/cookie.scss src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/js/global.js src/img/scmed/* src/img/NLogoHalignT.svg src/img/logoT.svg src/img/wlogoT.svg src/publicidad/* --out-dir public",
     "build": "rm -r public && parcel build src/*.pug src/docs/*.pug src/styles/main.scss src/styles/cookie.scss src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/js/global.js src/img/scmed/* src/img/NLogoHalignT.svg src/img/logoT.svg src/img/wlogoT.svg src/publicidad/* --out-dir public"
   },
