--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,7 @@
     "site": "sciencecookies",
     "public": "public",
     "cleanUrls": true,
+    "trailingSlash": true,
     "ignore": [
       "firebase.json",
       "**/.*",
