--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sciencecookies",
   "scripts": {
     "deployDyn": "firebase deploy --only functions:dynAllCalls,functions:dynArchive,functions:dynCalendars,functions:dynCookies",
-    "dev": "rm functions/views/includes/* && cp src/includes/* functions/views/includes && rm functions/views/layouts/* && cp src/layouts/* functions/views/layouts && rm -r public && parcel src/*.pug src/docs/*.pug src/styles/main.scss src/styles/cookie.scss src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/js/global.js src/img/scmed/* src/img/NLogoHalignT.svg src/img/logoT.svg src/img/wlogoT.svg src/publicidad/* --out-dir public",
-    "build": "rm functions/views/includes/* && cp src/includes/* functions/views/includes && rm functions/views/layouts/* && cp src/layouts/* functions/views/layouts && rm -r public && parcel build src/*.pug src/docs/*.pug src/styles/main.scss src/styles/cookie.scss src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/js/global.js src/img/scmed/* src/img/NLogoHalignT.svg src/img/logoT.svg src/img/wlogoT.svg src/publicidad/* src/google2ff882864ba47fa1.html --out-dir public"
+    "dev": "./scripts/parcelDev",
+    "build": "./scripts/parcelBuild"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
