--- a/firebase.json
+++ b/firebase.json
@@ -82,11 +82,31 @@
       },
       {
         "source": "/calendars",
-        "destination": "/localized/en_ALL/calendarios/"
+        "destination": "/localized/en_ALL/calendarios.html"
       },
       {
         "source": "/contact",
-        "destination": "/localized/en_ALL/contacto/"
+        "destination": "/localized/en_ALL/contacto.html"
+      },
+      {
+        "source": "/edit",
+        "destination": "/localized/en_ALL/editar.html"
+      },
+      {
+        "source": "/edit-calendar",
+        "destination": "/localized/en_ALL/editar-calendario.html"
+      },
+      {
+        "source": "/who-are-we",
+        "destination": "/localized/en_ALL/quienes-somos.html"
+      },
+      {
+        "source": "/profile",
+        "destination": "/localized/en_ALL/perfil.html"
+      },
+      {
+        "source": "/view-profile",
+        "destination": "/localized/en_ALL/ver-perfil.html"
       }
     ],
     "redirects": [
