--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "12"
   },
   "dependencies": {
+    "@google-cloud/translate": "^6.2.0",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "firebase-admin": "9.5.0",
