--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   "dependencies": {
     "express": "^4.17.1",
     "is-svg": "^4.3.1"
-  }
+  },
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ]
 }
