--- a/functions/package.json
+++ b/functions/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "firebase-admin": "9.5.0",
-    "firebase-functions": "^3.14.1",
     "lodash": "^4.17.21",
-    "nodemailer": "^6.6.0",
+    "nodemailer": "^6.6.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "firebase": "^8.6.2",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
+    "firebase-functions-test": "^0.2.3"
   },
   "private": true
 }
