--- a/functions/package.json
+++ b/functions/package.json
@@ -17,11 +17,9 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "nodemailer": "^6.6.1",
-    "pug": "^3.0.2"
-  },
-  "devDependencies": {
+    "pug": "^3.0.2",
     "firebase": "^8.6.2",
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^9.11.0",
     "firebase-functions": "^3.14.1",
     "firebase-functions-test": "^0.2.3"
   },
