--- a/functions/package.json
+++ b/functions/package.json
@@ -15,13 +15,13 @@
     "@google-cloud/translate": "^6.2.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "lodash": "^4.17.21",
-    "nodemailer": "^6.6.1",
-    "pug": "^3.0.2",
     "firebase": "^8.6.2",
     "firebase-admin": "^9.11.0",
     "firebase-functions": "^3.14.1",
-    "firebase-functions-test": "^0.2.3"
+    "firebase-functions-test": "^0.2.3",
+    "lodash": "^4.17.21",
+    "nodemailer": "^6.6.1",
+    "pug": "^3.0.2"
   },
   "private": true
 }
