--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,7 +7,18 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - main
 jobs:
+  build_public:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14.x"
+          registry-url: "https://registry.npmjs.org"
+      - run: npm install
+      - run: ./../../scripts/parcelBuild.sh
   build_and_deploy:
+    needs: build_public
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
