testing new workflow 2

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: "14.x"
           registry-url: "https://registry.npmjs.org"
       - run: npm install
-      - run: ./../../scripts/parcelBuild.sh
+      - run: ./scripts/parcelBuild.sh
   build_and_deploy:
     needs: build_public
     runs-on: ubuntu-latest
