--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,13 +2,12 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
+
 "on":
   push:
     branches:
       - main
 env:
-  GIT_USERNAME: ${{ github.actor }}
-  GIT_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
   FIX_COMMIT_MESSAGE: Built public/ & functions/views/
 
 jobs:
@@ -35,7 +34,7 @@ jobs:
         uses: EndBug/add-and-commit@v7
         with:
           add: '["public","functions/views"]'
-          author_name: ${{ GIT_USERNAME }}
+          author_name: ${{ github.actor }}
           default_author: github_actions
           message: "${{ env.FIX_COMMIT_MESSAGE }}"
 
