--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
-          add: '["public","functions/views"]'
+          add: '["public --force","functions/views --force"]'
           author_name: ${{ github.actor }}
           default_author: github_actions
           message: "${{ env.FIX_COMMIT_MESSAGE }}"
