--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ node_modules/
 .runtimeconfig.json
 *.DS_Store
 
+# parcel cache
 .cache
 .parcel-cache
 
@@ -75,3 +76,6 @@ emulators
 
 # GCP keys
 *Key.json
+
+# Public folder
+public/*
