--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -5,11 +5,8 @@ name: Deploy to Firebase Hosting on PR
 
 "on": pull_request
 
-env:
-  FIX_COMMIT_MESSAGE: Built public/ & functions/views/
-
 jobs:
-  build_public:
+  build_and_preview:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,28 +16,9 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - name: Build with parcel
         run: |
-          git show ${{ github.event.pull_request.head.sha }} --format=%s --no-patch --no-color
-
-          if [[ "$(git show ${{ github.event.pull_request.head.sha }} --format=%s --no-patch --no-color)" == "${{ env.FIX_COMMIT_MESSAGE }}" ]]; then
-            # The previous commit is a Build.
-            exit 0
-          fi
-
           npm install
           ./scripts/parcelBuild.sh
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          add: '["public --force","functions/views --force"]'
-          author_name: ${{ github.actor }}
-          default_author: github_actions
-          message: "${{ env.FIX_COMMIT_MESSAGE }}"
-
-  build_and_preview:
-    needs: build_public
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+      - name: Deploy to Firebase
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
