--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,11 +7,10 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
-env:
-  FIX_COMMIT_MESSAGE: Built public/ & functions/views/
 
 jobs:
-  build_public:
+  build_and_deploy:
+    needs: build_public
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -21,29 +20,10 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - name: Build with parcel
         run: |
-          git show ${{ github.event.pull_request.head.sha }} --format=%s --no-patch --no-color
-
-          if [[ "$(git show ${{ github.event.pull_request.head.sha }} --format=%s --no-patch --no-color)" == "${{ env.FIX_COMMIT_MESSAGE }}" ]]; then
-            # The previous commit is a Build.
-            exit 0
-          fi
-
           npm install
           ./scripts/parcelBuild.sh
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          add: '["public --force","functions/views --force"]'
-          author_name: ${{ github.actor }}
-          default_author: github_actions
-          message: "${{ env.FIX_COMMIT_MESSAGE }}"
-
-  build_and_deploy:
-    needs: build_public
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Deploy to Firebase
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCIENCE_COOKIES }}"
