--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,9 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-
-"on": pull_request
-
+'on': pull_request
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
@@ -19,10 +17,9 @@ jobs:
           npm install
           ./scripts/parcelBuild.sh
       - uses: FirebaseExtended/action-hosting-deploy@v0
-        name: Deploy to Firebase
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCIENCE_COOKIES }}"
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCIENCE_COOKIES }}'
           projectId: science-cookies
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
