--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,49 +2,16 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-
-"on": pull_request
-
-env:
-  FIX_COMMIT_MESSAGE: Built public/ & functions/views/
-
+'on': pull_request
 jobs:
-  build_public:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "14.x"
-          registry-url: "https://registry.npmjs.org"
-      - name: Build with parcel
-        run: |
-          git show ${{ github.event.pull_request.head.sha }} --format=%s --no-patch --no-color
-
-          if [[ "$(git show ${{ github.event.pull_request.head.sha }} --format=%s --no-patch --no-color)" == "${{ env.FIX_COMMIT_MESSAGE }}" ]]; then
-            # The previous commit is a Build.
-            exit 0
-          fi
-
-          npm install
-          ./scripts/parcelBuild.sh
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          add: '["public","functions/views"]'
-          author_name: ${{ github.actor }}
-          default_author: github_actions
-          message: "${{ env.FIX_COMMIT_MESSAGE }}"
-
   build_and_preview:
-    needs: build_public
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCIENCE_COOKIES }}"
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCIENCE_COOKIES }}'
           projectId: science-cookies
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
