--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,7 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{jpg,jpeg,png,svg,webp}": ["@parcel/transformer-raw"]
-  }
+    "*.{jpg,jpeg,png,svg,webp,woff,woff2,ttf,eot}": ["@parcel/transformer-raw"]
+  },
+  "resolvers": ["@parcel/resolver-glob","..."]
 }
