--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "last 3 opera versions",
     "last 3 ios_saf versions",
     "last 3 safari versions"
-  ]
+  ],
+  "dependencies": {
+    "firebase": "^9.0.0-beta.7"
+  }
 }
