--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "fireStart": "./scripts/fireStart.sh"
   },
   "devDependencies": {
-    "@parcel/resolver-glob": "^2.0.0-nightly.2338",
-    "@parcel/transformer-pug": "^2.0.0-beta.3.1",
-    "@parcel/transformer-sass": "^2.0.0-beta.3.1",
-    "parcel": "^2.0.0-beta.3.1"
+    "@parcel/resolver-glob": "^2.0.0-rc.0",
+    "@parcel/transformer-pug": "^2.0.0-rc.0",
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "parcel": "^2.0.0-rc.0"
   },
   "browserslist": [
     "last 3 and_chr versions",
