--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,6 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{jpg,jpeg,png,svg,webp}": ["@parcel/transformer-raw"]
+    "*.{jpg,jpeg,png,svg,webp,html}": ["@parcel/transformer-raw"]
   }
 }
