--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "last 3 safari versions"
   ],
   "dependencies": {
-    "firebase": "^9.0.0-beta.7",
-    "firebaseui": "^0.600.0-rc.0"
+    "firebase": "^9.0.0",
+    "firebaseui": "^0.600.0"
   }
 }
