--- a/package.json
+++ b/package.json
@@ -2,16 +2,10 @@
   "name": "sciencecookies",
   "scripts": {
     "deployDyn": "firebase deploy --only functions:dynAllCalls,functions:dynArchive,functions:dynCalendars,functions:dynCookies",
-    "dev": "./scripts/parcelDev.sh",
-    "build": "./scripts/parcelBuild.sh",
+    "inst": "cd next && npm i",
     "syncFSDB": "./scripts/syncFSDB.sh",
-    "fireStart": "./scripts/fireStart.sh",
-    "getFuncConf": "firebase functions:config:get > .runtimeconfig.json"
-  },
-  "devDependencies": {
-  },
-  "dependencies": {
-    "firebase": "^9.0.0",
-    "firebaseui": "^0.600.0"
+    "start": "npm run inst && firebase emulators:start --import emulators/emulator-fsdb",
+    "getFuncConf": "firebase functions:config:get > .runtimeconfig.json",
+    "deployHost": "firebase deploy --only hosting"
   }
 }
