--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "4.6.2",
+    "firebase": "^9.14.0",
+    "firebaseui": "^6.0.1",
+    "jquery": "^3.6.1",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
