--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "type": "module",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
@@ -12,15 +13,14 @@
     "node": "16"
   },
   "dependencies": {
-    "@google-cloud/translate": "^6.2.1",
-    "axios": "^0.21.1",
-    "express": "^4.17.1",
-    "firebase": "^8.6.2",
-    "firebase-admin": "^9.11.0",
-    "firebase-functions": "^3.14.1",
-    "firebase-functions-test": "^0.2.3",
+    "@google-cloud/translate": "^6.3.1",
+    "axios": "^0.21.4",
+    "express": "^4.18.2",
+    "firebase": "^8.10.1",
+    "firebase-admin": "^11.3.0",
+    "firebase-functions": "^4.1.0",
     "lodash": "^4.17.21",
-    "nodemailer": "^6.6.1",
+    "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
     "short-unique-id": "^4.3.8"
   },
