--- a/next/package.json
+++ b/next/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "4.6.2",
-    "firebase": "^9.14.0",
+    "firebase": "^9.15.0-canary.d8af08feb",
     "firebaseui": "^6.0.1",
     "jquery": "^3.6.1",
     "next": "^13.0.6",
