--- a/next/package.json
+++ b/next/package.json
@@ -13,12 +13,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "bootstrap": "4.6.2",
+    "bootstrap": "^4.4.1",
     "firebase": "^9.15.0-canary.d8af08feb",
     "firebaseui": "^6.0.1",
-    "jquery": "^3.6.1",
     "next": "^13.0.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "sass": "^1.55.0"
   },
