--- a/next/package.json
+++ b/next/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cd ..&&npm run start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,11 +13,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "ace-builds": "^1.15.0",
     "bootstrap": "^4.4.1",
     "firebase": "^9.15.0-canary.3ee35f9ae",
     "firebaseui": "^6.0.1",
+    "jquery": "^3.6.3",
     "next": "^13.0.6",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "sass": "^1.55.0"
